--- a/styles/my.css
+++ b/styles/my.css
@@ -1,207 +1,147 @@
 * {
   margin: 0;
   padding: 0;
+  list-style: none;
+  font-family: var(--Nova-font);
+}
+
+:root {
+  --NovaMono-font: 'Nova Mono', monospace;
+  --Quicksand-font: 'Quicksand', sans-serif;
+  --Ubuntu-font: 'Ubuntu', sans-serif;
+  --bg-color-body: #cfece5;
+  --bg-color-main1: #bfd8d2;
+  --bg-color-main2: #fedcd2;
+  --bg-color-main3: #e57549;
+  --bg-color-main4: #edcf79;
+  --bg-color-about: #e7fff9;
+}
+html {
+  font-size: calc(1em + 2vmin);
+  font-size: -webkit-calc(1em + 2vmin);
+  font-size: -moz-calc(1em + 2vmin);
 }
 body {
-  background-color: #f4f4f4;
   font-family: 'Nova Mono', monospace;
+  font-size: 1rem;
+  min-height: 100vh;
   max-width: 100vw;
   margin: 0 auto;
+  background: black; /*test*/
 }
-.noselect {
-  -webkit-touch-callout: none; /* iOS Safari */
-  -webkit-user-select: none; /* Safari */
-  -khtml-user-select: none; /* Konqueror HTML */
-  -moz-user-select: none; /* Firefox */
-  -ms-user-select: none; /* Internet Explorer/Edge */
-  user-select: none; /* Non-prefixed version, currently
-                                    supported by Chrome and Opera */
+.ubuntu {
+  font-family: var(--Ubuntu-font);
+  font-style: normal;
+  font-weight: bold;
+  color: black;
 }
-.html {
-  font-size: 1em;
+.nova {
+  font-family: var(--NovaMono-font);
+  font-style: normal;
+  font-weight: normal;
+  color: black;
 }
-.page-grid-container {
+.quicksand {
+  font-family: var(--Quicksand-font);
+  font-style: normal;
+  font-weight: normal;
+  color: black;
+}
+.main-container {
   display: grid;
+  background-color: var(--bg-color-body);
   width: 100%;
-  max-width: 100%;
-  height: auto;
-  grid-template-rows: 60px 1fr;
-  font-size: 1em;
-}
-
-/* header element */
-.header-wrap {
-  display: flex;
-  position: sticky;
-  position: -webkit-sticky; /* Safari */
-  top: 0;
   height: 100%;
-  width: 100%;
-  background-color: black;
-}
-.header {
-  display: flex;
-  flex-grow: 4;
-  justify-content: center;
-  align-items: center;
-  font-size: 20px;
-  font-style: bold;
-  color: whitesmoke;
-  height: auto;
-  width: auto;
-  padding-left: 25px;
-}
-.nav-wrap {
-  display: flex;
-  justify-content: flex-start;
-  align-content: flex-start;
-  flex-flow: nowrap;
-  flex-direction: row;
-  width: 400px;
-  height: auto;
-  z-index: 1;
-}
-
-.nav-item {
-  display: flex;
-  color: white;
-  flex-grow: 1;
-  text-transform: uppercase;
-  height: auto;
-  justify-content: center;
-  align-items: center;
-}
-.nav-item:hover {
-  cursor: pointer;
-  color: rgb(0, 0, 0);
-  background-color: rgba(210, 204, 204, 0.927);
-}
-.current {
-  color: rgba(255, 217, 0, 0.769);
-}
-
-.logo {
-  display: flex;
-  flex-grow: 4;
-  height: 60px;
-  justify-content: flex-end;
-  align-items: center;
-  margin-right: 2%;
-}
-.logo img {
-  width: auto;
-  height: 100%;
-}
-
-#menu-toggle,
-.label-toggle {
-  opacity: 0;
-  width: 0;
-  height: 0;
-  display: none;
-}
-
-@media (max-width: 42em) {
-  .nav-wrap {
-    display: flex;
-    flex-direction: column;
-    width: 0;
-  }
-  .nav-item {
-    display: none;
-    width: 100vw;
-    background-color: black;
-    padding: 12px 0 12px 0px;
-  }
-  #menu-toggle:checked ~ .nav-item {
-    display: flex;
-  }
-
-  .label-toggle {
-    display: block;
-    cursor: pointer;
-    padding: 15px 0 15px 25px;
-    font-size: 30px;
-    width: 50px;
-    height: 50px;
-    z-index: 1;
-    color: whitesmoke;
-
-    opacity: 1;
-    transition: opacity 0.3s linear;
-  }
-  .label-toggle:hover {
-    background-color: rgba(213, 213, 213, 0.927);
-  }
-  .page-grid-container {
-    font-size: 0.8em;
-  }
-} /* end header css  */
-
-.main-grid-wrapper {
-  background-color: black;
-  display: grid;
-  height: 40em;
-  /* grid-template-columns: 1fr auto 1fr; */
-  /* grid-template-columns: 1fr 1fr 1fr 1fr 1fr; */
-  /* grid-template-areas:
-    'element1 element1 element2 element3'
-    'element1 element1 element2 .'
-    'element1 element1 element2 .'; */
-}
-.element1 {
-  grid-area: 2 / 1 / 6 / 2;
-  display: inline-flex;
-  background: cyan;
-  justify-content: center;
-  align-items: center;
-  margin: 0 auto;
-  width: 20em;
-  height: 20em;
-}
-.element2 {
-  grid-area: 1/2/ 11/ 5;
-  display: inline-flex;
-  background: blue;
-  justify-content: center;
-  align-items: center;
-}
-.element3 {
-  grid-area: 5/1 / 8/1;
-  display: grid;
-  background: green;
-  justify-content: space-around;
-  align-items: center;
-  grid-template-rows: 1fr 1fr;
+  min-height: 100vh;
   grid-template-columns: 1fr;
+  grid-template-rows: 100vh 1fr;
 }
-.element3 span {
-  grid-row: 1;
-  display: flex;
-  font-size: 1.5em;
+.landing-container {
+  position: relative;
+  display: grid;
   width: 100%;
   height: 100%;
-  justify-content: center;
-  align-items: center;
-  background: orange;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
 }
-.element3 > div {
-  grid-row: 2;
+.bg-main-1 {
+  background-color: var(--bg-color-main1);
+}
+.bg-main-2 {
+  background-color: var(--bg-color-main2);
+}
+.bg-main-3 {
+  background-color: var(--bg-color-main3);
+}
+.bg-main-4 {
+  background-color: var(--bg-color-main4);
+}
+.name {
+  position: absolute;
   display: flex;
-  justify-content: space-around;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  background: red;
-}
-.element3 div img {
-  height: 3em;
-  width: 3em;
-}
-/* .element4 {
-  grid-area: 8/1 / 11/1;
-  display: inline-flex;
-  background: yellow;
   justify-content: center;
-  align-items: center;
-} */
+  align-content: center;
+  color: white;
+  font-size: calc(1.4em + 5vmin);
+  font-size: -webkit-calc(1.4em + 5vmin);
+  font-size: -moz-calc(1.4em + 5vmin);
+  font-family: var(--Nova-font);
+  width: 100%;
+  margin: 0 auto;
+  top: 40%;
+  mix-blend-mode: normal;
+  backdrop-filter: blur(4px);
+  text-transform: uppercase;
+}
+.slogan {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  font-size: calc(0.75em + 2vmin);
+  font-size: -webkit-calc(0.75em + 2vmin);
+  font-size: -moz-calc(0.75em + 2vmin);
+  width: 100%;
+  margin: 0 auto;
+  top: 70%;
+}
+.about-container {
+  position: relative;
+  display: grid;
+  background-color: var(--bg-color-about);
+  width: 100%;
+  height: 980px;
+}
+.about-h1 {
+  position: relative;
+  display: flex;
+  justify-self: flex-end;
+  font-size: 1.3em;
+  top: 10%;
+  right: 5%;
+}
+
+.about-h2 {
+  position: relative;
+  display: flex;
+  justify-self: flex-start;
+  font-size: 1.2em;
+  left: 2%;
+}
+
+.about-p {
+  position: relative;
+  display: flex;
+  justify-self: center;
+  font-size: 0.9em;
+
+  width: 90%;
+}
+.about-slogan {
+  position: absolute;
+  display: flex;
+  font-size: 1em;
+  bottom: 5%;
+}
+@media only screen and (max-width: 660px) {
+}
