--- a/styles/my.css
+++ b/styles/my.css
@@ -1,3 +1,4 @@
+/*global*/
 * {
   margin: 0;
   padding: 0;
@@ -15,6 +16,7 @@
   --bg-color-main3: #e57549;
   --bg-color-main4: #edcf79;
   --bg-color-about: #e7fff9;
+  --bg-color-project: #f4c2af;
 }
 html {
   font-size: calc(1em + 2vmin);
@@ -47,15 +49,20 @@ body {
   font-weight: normal;
   color: black;
 }
+/*end global*/
+/*main*/
 .main-container {
   display: grid;
+  font-size: 1rem;
   background-color: var(--bg-color-body);
   width: 100%;
   height: 100%;
   min-height: 100vh;
   grid-template-columns: 1fr;
-  grid-template-rows: 100vh 1fr;
+  grid-template-rows: 100vh 100vh 100vh;
 }
+/*end main*/
+/*landing*/
 .landing-container {
   position: relative;
   display: grid;
@@ -63,6 +70,9 @@ body {
   height: 100%;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
+  font-size: calc(1em + 3vmin);
+  font-size: -webkit-calc(1em + 3vmin);
+  font-size: -moz-calc(1em + 3vmin);
 }
 .bg-main-1 {
   background-color: var(--bg-color-main1);
@@ -82,9 +92,9 @@ body {
   justify-content: center;
   justify-self: center;
   color: white;
-  font-size: calc(1.4em + 5vmin);
-  font-size: -webkit-calc(1.4em + 5vmin);
-  font-size: -moz-calc(1.4em + 5vmin);
+  font-size: calc(1.4em + 3vmin);
+  font-size: -webkit-calc(1.4em + 3vmin);
+  font-size: -moz-calc(1.4em + 3vmin);
   font-family: var(--Nova-font);
   width: 80%;
   top: 40%;
@@ -97,20 +107,22 @@ body {
   display: flex;
   justify-content: center;
   justify-self: center;
-  font-size: calc(0.50em + 3vmin);
-  font-size: -webkit-calc(0.50em + 3vmin);
-  font-size: -moz-calc(0.50em + 3vmin);
+  font-size: 0.5em;
   width: 90%;
   top: 70%;
   font-weight: bold;
 }
+/* end landing*/
+/* about*/
 .about-container {
   position: relative;
   display: grid;
   background-color: var(--bg-color-about);
   width: 100%;
-  height: 110%;
-  grid-template-rows: 80px 200px auto 1fr;
+  height: 100%;
+  min-height: 100vh;
+  grid-template-rows: 2.7em 2.7em auto 1fr;
+  font-size: 1em;
 }
 .about-h1 {
   position: relative;
@@ -126,20 +138,22 @@ body {
   display: flex;
   justify-self: flex-start;
   align-self: center;
-  font-size: 1.2em;
+  font-size: calc(0.4em + 3vmin);
+  font-size: -webkit-calc(0.4em + 3vmin);
+  font-size: -moz-calc(0.4em+ 3vmin);
   left: 2%;
 }
 
 .about-p {
   display: flex;
   justify-self: center;
-  font-size: 0.9em;
+  font-size: 0.8em;
   width: 90%;
 }
 .about-slogan {
   display: flex;
   text-align: end;
-  font-size: 1.5em;
+  font-size: 1.3em;
   justify-self: flex-end;
   align-self: center;
   justify-content: center;
@@ -147,8 +161,120 @@ body {
   width: 50%;
   background: var(--bg-color-body);
 }
-@media only screen and (max-width: 400px) {
-  html{
-    font-size: 0.9em;
-  }
+/*end about*/
+/*project*/
+.project-container {
+  position: relative;
+  display: grid;
+  background-color: var(--bg-color-project);
+  width: 100%;
+  height: 100%;
+  min-height: 100vh;
+  grid-template-rows: 2.7em auto 0.5em;
+  font-size: 1em;
+}
+.project-h1 {
+  position: relative;
+  display: flex;
+  justify-self: flex-start;
+  align-self: center;
+  font-size: 1.3em;
+  left: 5%;
+}
+
+.project-slider-wrap {
+  position: relative;
+  justify-self: center;
+  align-self: center;
+  display: block;
+  background-color: var(--bg-color-main4);
+  width: 100%;
+  height: 100%;
+  max-height: 90vh;
+  max-width: 95vw;
+  font-size: 1em;
+  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.25);
+  border-top-left-radius: 40px;
+  border-top-right-radius: 40px;
+  text-align: center;
+  overflow: auto;
+}
+
+.slides {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  overflow-x: scroll;
+  scroll-snap-type: x mandatory;
+  scroll-behavior: smooth;
+  -webkit-overflow-scrolling: touch;
+}
+.slides > div {
+  position: relative;
+  display: grid;
+  margin-right: 0.5em;
+  flex-shrink: 0; /*shrink each item to it fit it parent*/
+  scroll-snap-align: start; /*snap point*/
+  width: 100%;
+  height: 100%;
+  background-color: var(--bg-color-main2);
+  font-size: 1rem;
+  grid-template-columns: 1fr 1fr auto;
+  grid-template-rows: 3em 1fr 2em;
+}
+.project-h2 {
+  grid-column: span 3;
+  align-self: center;
+  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.25);
+  background: var(--bg-color-main4);
+  width: 95%;
+  margin: 0 auto;
+}
+.project-p {
+  grid-column: span 3;
+  text-align: left;
+  width: 86%;
+  margin: 0 auto;
+  font-size: 0.75em;
+}
+.project-link {
+  grid-column: 3;
+  text-align: right;
+  padding-right: 1em;
+  text-decoration: none;
+  font-size: 0.8em;
+  font-weight: bold;
+}
+.project-link:hover {
+  color: black;
+}
+.project-link:visited {
+  color: inherit;
+}
+
+.slides::-webkit-scrollbar {
+  width: 1em;
+  height: 1em;
+}
+.slides::-webkit-scrollbar-thumb {
+  background: var(--bg-color-main3);
+  border-radius: 5px;
+}
+.slides::-webkit-scrollbar-track {
+  background: var(--bg-color-main4);
+}
+.slider-index {
+  position: absolute;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  align-content: center;
+  bottom: 0;
+  width: 100%;
+  pointer-events: none;
+}
+.slider-index > p {
+  pointer-events: none;
+  z-index: 1;
+  font-size: 0.7em;
+  color: black;
 }
