--- a/styles/my.css
+++ b/styles/my.css
@@ -1,4 +1,5 @@
 /*global*/
+@import url(https://fonts.googleapis.com/css?family=Nova+Mono);
 * {
   margin: 0;
   padding: 0;
@@ -17,16 +18,21 @@
   --bg-color-main4: #edcf79;
   --bg-color-about: #e7fff9;
   --bg-color-project: #f4c2af;
+  --bg-color-nav: #393939;
 }
 html {
   font-size: calc(1em + 2vmin);
   font-size: -webkit-calc(1em + 2vmin);
   font-size: -moz-calc(1em + 2vmin);
+  scroll-behavior: smooth;
+  min-height: 100%;
+  height: 100%;
 }
 body {
   font-family: 'Nova Mono', monospace;
   font-size: 1rem;
-  min-height: 100vh;
+  min-height: 100%;
+  height: 100%;
   max-width: 100vw;
   margin: 0 auto;
   background: black; /*test*/
@@ -49,9 +55,141 @@ body {
   font-weight: normal;
   color: black;
 }
+textarea {
+  resize: none;
+}
 /*end global*/
+/*nav*/
+.nav-container {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background: var(--bg-color-nav);
+  box-sizing: border-box;
+  z-index: 100;
+  opacity: 1;
+}
+nav {
+  max-width: 1800px;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 1fr 0.5fr;
+}
+.logo {
+  grid-column: 2;
+  font-size: 0.7em;
+  align-self: center;
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
+  width: auto;
+}
+.logo img {
+  grid-column: 2;
+  align-self: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
+  width: 1.2em;
+  height: 1.2em;
+  max-width: 100%;
+  max-height: 100%;
+}
+
+#nav-toggle {
+  display: none;
+}
+.left-menu {
+  display: flex;
+  box-sizing: border-box;
+  grid-column: 1;
+}
+.left-menu li {
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.burger-menu {
+  display: none;
+}
+
+nav a {
+  color: white;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-family: 'Oswald', sans-serif;
+  transition: 0.3s all ease-in-out;
+}
+nav a:hover {
+  opacity: 0.7;
+  background-color: white;
+  color: black;
+  font-weight: bold;
+}
+nav a:focus {
+  opacity: 0.7;
+}
+nav a:active {
+  opacity: 0.7;
+  color: black;
+}
+.left-menu a {
+  display: flex;
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  font-size: 0.5em;
+  font-weight: 300;
+  padding: 1em 1em;
+  align-items: center;
+}
+@media only screen and (max-width: 600px) {
+  .burger-menu {
+    display: flex;
+    box-sizing: border-box;
+    width: 80px;
+    grid-column: 1;
+    justify-content: center;
+  }
+  .burger-menu:hover {
+    background: #3c3c3c;
+    opacity: 0.8;
+  }
+  .left-menu {
+    display: none;
+  }
+  #nav-toggle:checked ~ .left-menu {
+    display: grid;
+    grid-row: 2;
+    grid-column: span 3;
+    width: 100%;
+    height: 100%;
+  }
+  .left-menu li {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    height: 100%;
+    width: 100%;
+  }
+  .left-menu a {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    font-size: 0.5em;
+    font-weight: 300;
+  }
+}
+
+/*end nav*/
 /*main*/
 .main-container {
+  position: absolute;
+  top: 0;
   display: grid;
   font-size: 1rem;
   background-color: var(--bg-color-body);
@@ -59,7 +197,7 @@ body {
   height: 100%;
   min-height: 100vh;
   grid-template-columns: 1fr;
-  grid-template-rows: 100vh 1fr;
+  grid-template-rows: 100vh auto;
 }
 /*end main*/
 /*landing*/
@@ -113,12 +251,21 @@ body {
   font-weight: bold;
 }
 /* end landing*/
-/* about*/
+/*about*/
+.about-wrapper {
+  position: relative;
+  background-color: var(--bg-color-about);
+  display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+}
 .about-container {
   position: relative;
   display: grid;
-  background-color: var(--bg-color-about);
-  width: 100%;
+  width: 92%;
+  max-width: calc(1000px + 4vmax);
   height: 100%;
   min-height: 100vh;
   grid-template-rows: 2.7em 2.7em auto 1fr;
@@ -127,10 +274,10 @@ body {
 .about-h1 {
   position: relative;
   display: flex;
-  justify-self: flex-end;
+  justify-content: flex-end;
   align-self: center;
   font-size: 1.3em;
-  right: 5%;
+  width: 100%;
 }
 
 .about-h2 {
@@ -147,27 +294,39 @@ body {
 .about-p {
   display: flex;
   justify-self: center;
+  align-self: center;
   font-size: 0.75em;
-  width: 90%;
+  width: 95%;
 }
 .about-slogan {
   display: flex;
   text-align: end;
   font-size: 1.3em;
-  justify-self: flex-end;
+  justify-self: center;
   align-self: center;
-  justify-content: center;
-  margin-right: 5%;
-  width: 50%;
+  justify-content: flex-end;
+  width: 80%;
+}
+.about-slogan span {
+  width: 60%;
   background: var(--bg-color-body);
 }
 /*end about*/
 /*project*/
+.project-wrapper {
+  position: relative;
+  background-color: var(--bg-color-project);
+  display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+}
 .project-container {
   position: relative;
   display: grid;
-  background-color: var(--bg-color-project);
-  width: 100%;
+  width: 95%;
+  max-width: calc(1000px + 4vmax);
   height: 100%;
   min-height: 100vh;
   grid-template-rows: 2.7em auto 0.5em;
@@ -197,17 +356,17 @@ body {
   border-top-left-radius: 40px;
   border-top-right-radius: 40px;
   text-align: center;
-  overflow: auto;
+  overflow: hidden;
 }
 
 .slides {
   width: 100%;
   height: 100%;
   display: flex;
-  overflow-x: auto;
+  overflow-x: scroll;
   scroll-snap-type: x mandatory;
   scroll-behavior: smooth;
-  -webkit-overflow-scrolling: auto; /*mobile fix*/
+  -webkit-overflow-scrolling: touch;
 }
 .slides > div {
   position: relative;
@@ -239,11 +398,17 @@ body {
 }
 .project-link {
   grid-column: 3;
-  text-align: right;
-  padding-right: 1em;
+  display: inline-block;
+  height: 1.3em;
+  text-align: end;
   text-decoration: none;
   font-size: 0.8em;
   font-weight: 600;
+  margin-right: 5%;
+  box-sizing: border-box;
+}
+.project-link::before {
+  content: '> ';
 }
 .project-link:hover {
   visibility: visible;
@@ -267,17 +432,229 @@ body {
 .slider-index {
   position: absolute;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(5, 1fr); /* = div it display*/
   align-content: center;
   bottom: 0;
   width: 100%;
   pointer-events: none;
-  touch-action: none;
 }
 .slider-index > p {
   pointer-events: none;
-  touch-action: none; /*mobile fix*/
-  z-index: 1;
   font-size: 0.75em;
   color: black;
+  z-index: 1;
+}
+/*mobile slider*/
+.slider-index > span {
+  /*fixed for mobile as overflow-touch force native scroll */
+  display: none;
+  grid-column: 1/-1;
+  pointer-events: none;
+  font-size: 0.7em;
+  color: black;
+  z-index: 1;
+}
+@media only screen and (max-width: 500px) {
+  .slider-index > span {
+    display: block;
+    background: var(--bg-color-main4);
+  }
+  .slider-index > p {
+    display: none;
+  }
+}
+/*end mobile slider*/
+
+.contact-wrapper {
+  position: relative;
+  background-color: var(--bg-color-about);
+  display: flex;
+  width: 100%;
+  height: 100%;
+  min-height: 100vh;
+  justify-content: center;
+  align-items: center;
+  background: var(--bg-color-main3);
+}
+.contact-container {
+  position: relative;
+  display: grid;
+  width: 90%;
+  min-height: 80%;
+  max-width: 1000px;
+  border-radius: 40px;
+  grid-template-rows: auto 1fr auto;
+  background: #ffe396;
+}
+
+.contact-h1 {
+  position: relative;
+  display: flex;
+  justify-self: center;
+  align-self: center;
+  padding-top: 0.5em; /*lazy*/
+  font-size: 1.3em;
+}
+
+.form-wrapper {
+  position: relative;
+  display: grid;
+  grid-template-rows: repeat(4, auto); /*number of element in form*/
+  grid-gap: 1em;
+  justify-self: center;
+  max-width: 100%;
+  width: 90%;
+  height: 90%;
+  box-sizing: border-box;
+  border-radius: 10px;
+}
+
+.form-input {
+  position: relative;
+  margin: 1.5em auto;
+  background: white;
+  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+}
+
+.form-input .form-label {
+  position: absolute;
+  top: 0.1em;
+  pointer-events: none;
+  padding-left: 0.125rem;
+  z-index: 1;
+  color: #b3b3b3;
+  font-size: 0.5em;
+  font-weight: bold;
+  font-family: var(--Quicksand-font);
+  -webkit-transition: all 0.28s ease;
+  transition: all 0.28s ease;
+}
+.form-input .bar {
+  position: relative;
+  display: block;
+  border-bottom: 0.0625rem solid #999;
+  width: 60%;
+  margin: 0 auto;
+}
+.form-input .bar::before {
+  content: '';
+  position: absolute;
+  height: 0.2em;
+  width: 0;
+  bottom: 0;
+  margin: 0 auto;
+  background: var(--bg-color-main4);
+  -webkit-transition: left 0.3s ease, width 0.3s ease;
+  transition: left 0.3s ease, width 0.3s ease;
+  z-index: 1;
+}
+.form-input input,
+.form-input textarea {
+  display: block;
+  background: none;
+  padding: 0.125rem 0.125rem 0.0625rem;
+  font-size: 0.7em;
+  border-width: 0;
+  border-color: transparent;
+  line-height: 1.9;
+  width: 100%;
+  color: transparent;
+  -webkit-transition: all 0.28s ease;
+  transition: all 0.28s ease;
+  box-shadow: none;
+}
+
+.form-input select,
+.form-input input:focus,
+.form-input input:valid,
+.form-input textarea:focus,
+.form-input textarea:valid {
+  color: black;
+  outline: none;
+}
+.form-input select ~ .form-label,
+.form-input input:focus ~ .form-label,
+.form-input input:valid ~ .form-label,
+.form-input textarea:focus ~ .form-label,
+.form-input textarea:valid ~ .form-label {
+  font-size: 0.8rem;
+  color: gray;
+  top: -1rem;
+  left: 0;
+}
+.form-input input:focus ~ .form-label,
+.form-input textarea:focus ~ .form-label {
+  color: black; /*overide for focus color*/
+}
+
+.form-input input:focus ~ .bar::before,
+.form-input textarea:focus ~ .bar::before {
+  width: 100%;
+}
+
+.form-button {
+  position: relative;
+  display: flex;
+  width: 100%;
+  height: 2em;
+  justify-content: center;
+  align-items: center;
+}
+.form-button button {
+  display: flex;
+  width: 40%;
+  height: 100%;
+  background: var(--bg-color-main4);
+  box-shadow: 0px 5px 5px var(--bg-color-main4);
+  border-radius: 10px;
+  border-style: none;
+  outline: none;
+  justify-content: center;
+  align-items: center;
+  font-size: 0.8em;
+}
+
+.form-button button:active {
+  background: #f8d470;
+  border: 1px solid var(--bg-color-main4);
+}
+.form-button button i::after {
+  content: ' Send ';
+  font-size: 0.9em;
+  font-family: var(--Quicksand-font);
+}
+.footer-wrap {
+  position: relative;
+  height: 3rem;
+  background: var(--bg-color-nav);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2em;
+}
+.footer-container {
+  position: relative;
+  display: flex;
+  flex-wrap: nowrap;
+  align-self: center;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 80%;
+  color: white;
+  font-size: 0.6em;
+  display: flex;
+  margin: auto 0;
+}
+.footer-container i {
+  margin-right: 0.4em;
+}
+.footer-container span {
+  display: flex;
+  align-self: flex-start;
+  color: white;
+  font-size: 0.4em;
+  font-weight: bold;
+  margin-right: -2%; /*little lazy adjust*/
 }
