--- a/styles/my.css
+++ b/styles/my.css
@@ -59,10 +59,6 @@ textarea {
   resize: none;
 }
 
-blink {
-  animation: blink 4s steps(10, start) infinite;
-  -webkit-animation: blink 4s steps(10, start) infinite;
-}
 @keyframes blink {
   to {
     visibility: hidden;
@@ -73,6 +69,28 @@ blink {
     visibility: hidden;
   }
 }
+@keyframes drop {
+  0% {
+    height: 20%;
+  }
+  50% {
+    height: 100%;
+  }
+  100% {
+    height: 80%;
+  }
+}
+@-webkit-keyframes drop {
+  0% {
+    height: 20%;
+  }
+  50% {
+    height: 100%;
+  }
+  100% {
+    height: 80%;
+  }
+}
 
 /*end global*/
 /*nav*/
@@ -80,7 +98,7 @@ blink {
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 1;
+  z-index: 99;
 }
 .nav-wrap {
   max-width: 1800px;
@@ -123,24 +141,27 @@ blink {
   justify-content: center;
   align-items: center;
 }
-.nav-wrap a {
+.logo {
   color: whitesmoke;
   text-decoration: none;
   text-transform: uppercase;
   font-family: var(--Ubuntu-font);
 }
-.nav-wrap a:hover {
+.left-menu li a:hover,
+.nav-wrap .logo:hover {
   opacity: 1;
   background-color: whitesmoke;
   color: black;
   font-weight: bold;
 }
-.nav-wrap a:focus {
+.left-menu li a:hover,
+.nav-wrap .logo:focus {
   opacity: 0.7;
+  outline: 0;
 }
-.nav-wrap a:active {
-  opacity: 0.7;
-  color: black;
+.left-menu li a:hover,
+.nav-wrap .logo:active {
+  opacity: 1;
 }
 .left-menu a {
   display: flex;
@@ -151,81 +172,98 @@ blink {
   font-weight: 300;
   padding: 1em 1em;
   align-items: center;
+
+  color: whitesmoke;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-family: var(--Ubuntu-font);
 }
-.burger-menu {
+
+.dropdown i {
   display: none;
-  background: var(--bg-color-nav);
 }
-#nav-toggle {
-  display: none;
+.dropdown .menu-icon {
+  text-decoration: none;
+  width: 100%;
+  height: auto;
 }
 
 @media only screen and (max-width: 600px) {
   /*nav for small screen */
   .nav-wrap {
-    grid-template-columns: 1fr 8fr;
+    grid-template-columns: 1fr;
   }
-  .burger-menu {
-    grid-column: 1;
+  .logo {
+    grid-column: auto; /*take full column*/
+  }
+  .dropdown i {
     display: flex;
+    color: white;
+    width: 100%;
+    justify-content: center;
+    align-content: center;
+  }
+
+  .dropdown {
+    grid-row: 2; /*move to row 2*/
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     background: var(--bg-color-nav);
-    box-sizing: border-box;
-    width: auto;
-    height: auto;
     cursor: pointer;
+    flex-wrap: nowrap;
+    height: 100%;
   }
-  .burger-menu:hover {
-    background: #545454;
-    opacity: 0.8;
+
+  .dropdown:hover,
+  .dropdown:active {
+    background: var(--bg-color-nav);
+    opacity: 1;
+    height: 80%;
+    animation: drop 1.2s normal 1;
+    -webkit-animation: drop 1.2s normal 1;
   }
+
   .left-menu {
-    display: grid;
-    grid-row: 2;
-    grid-column: span 3;
-    height: 0;
-    visibility: hidden;
+    display: flex;
+    flex-direction: column;
     opacity: 0;
+    visibility: hidden;
+    width: 100%;
+    height: 0;
+    background: var(--bg-color-nav);
   }
-  #nav-toggle:checked ~ .left-menu {
+
+  .dropdown:hover .left-menu,
+  .dropdown:active .left-menu {
     opacity: 1;
     visibility: visible;
-    width: 100%;
     height: 100%;
     transition: opacity 0.7s;
-    transition: height 0.7s;
   }
+
   .left-menu li {
     display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
     height: 0;
   }
-  #nav-toggle:checked ~ .left-menu li {
+
+  .dropdown:hover .left-menu li,
+  .dropdown:active .left-menu li {
     height: 100%;
-    transition: height 1s;
+    transition: height 1s ease-in-out;
   }
+
   .left-menu li a {
     opacity: 0;
     visibility: hidden;
   }
-  #nav-toggle:checked ~ .left-menu li a {
+
+  .dropdown:hover .left-menu li a,
+  .dropdown:active .left-menu li a {
     visibility: visible;
     opacity: 1;
-    transition: opacity 1s;
-  }
-  .left-menu li a:active ~ .left-menu {
-    height: 0;
-    visibility: hidden;
-    opacity: 0;
-  }
-  .left-menu li a:active ~ .left-menu li {
-    height: 0;
-  }
-  .left-menu li a:active ~ .left-menu li {
-    opacity: 0;
-    visibility: hidden;
+    transition: opacity 1.2s ease-in-out;
   }
 } /*end media query*/
 /*end nav*/
@@ -510,7 +548,8 @@ blink {
   box-sizing: border-box;
   margin-right: 5%;
 }
-.project-link:hover::before {
+.project-link:hover::before,
+.project-link:focus::before {
   font-family: 'Font Awesome 5 Free';
   content: '\f0da'; /*arrow right icon*/
   display: inline-block;
@@ -519,7 +558,9 @@ blink {
   font-weight: bold;
   color: var(--bg-color-main3);
 }
-
+.project-link:focus {
+  outline: none;
+}
 .project-link:visited {
   color: inherit;
 }
