--- a/styles/my.css
+++ b/styles/my.css
@@ -416,23 +416,47 @@ textarea {
   display: flex;
   justify-self: center;
   align-self: center;
-  font-size: 0.75em;
+  font-size: 0.7em;
   width: 95%;
 }
-.about-slogan {
-  display: flex;
-  text-align: end;
+.about-history {
+  display: grid;
+  margin-top: 1em;
+  margin-bottom: 2em;
   font-size: 1em;
   justify-self: center;
   align-self: center;
-  justify-content: flex-end;
-  width: 80%;
-  max-height: 80%;
+  width: 95%;
+  font-size: 1em;
 }
-.about-slogan span {
-  width: 80%;
-  max-height: 80%;
+.about-history > span {
+  font-size: 0.75em;
   background: var(--bg-color-body);
+  margin-top: 1em; /* each history section add up with .about-history margin */
+}
+.about-history > ul {
+  display: flex;
+  flex-direction: column;
+  justify-self: center;
+  width: 95%;
+}
+.about-history > ul > li {
+  display: grid;
+  grid-template-columns: 3fr 7fr;
+  font-size: 0.7em;
+  margin-top: 0.4em;
+  margin-bottom: 0.3em;
+}
+.about-history > ul > li > h2 {
+  display: inline-flex;
+  font: var(--Ubuntu-font);
+  font-weight: bold;
+  color: gray;
+}
+
+.about-history > ul p {
+  margin-top: 1em;
+  font-size: 0.6em;
 }
 /*end about*/
 /*project*/
@@ -829,6 +853,8 @@ textarea {
   font-size: 0.9em;
   font-family: var(--Quicksand-font);
 }
+/*end form*/
+/*footer*/
 .footer-wrap {
   position: relative;
   height: 3rem;
@@ -863,3 +889,12 @@ textarea {
   font-weight: bold;
   margin-right: -2%; /*little lazy adjust*/
 }
+.footer-container a {
+  color: inherit;
+  text-decoration: none;
+}
+.footer-container a:hover,
+.footer-container a:focus {
+  color: var(--bg-color-main3);
+}
+/*footer*/
