--- a/styles/my.css
+++ b/styles/my.css
@@ -43,6 +43,7 @@ body {
   animation: fade-in 2s normal 1 ease-in-out;
   -webkit-animation: fade-in 2s normal 1 ease-in-out;
 }
+/* fontfamily */
 .ubuntu {
   font-family: var(--Ubuntu-font);
   font-style: normal;
@@ -61,10 +62,12 @@ body {
   font-weight: normal;
   color: black;
 }
+
 textarea {
   resize: none; /*disable textarea corner resize*/
 }
 
+/* animation */
 @keyframes blink {
   to {
     visibility: hidden;
@@ -113,6 +116,21 @@ textarea {
   }
 }
 
+@-webkit-keyframes drop2 {
+  0% {
+    height: 90%;
+    opacity: 0.5;
+    background-color: var(--color1--);
+  }
+  50% {
+    height: 95%;
+  }
+  100% {
+    height: 100%;
+    opacity: 1;
+  }
+}
+
 @keyframes bar {
   0% {
     width: 50%;
@@ -125,6 +143,20 @@ textarea {
     opacity: 1;
   }
 }
+
+@-webkit-keyframes bar {
+  0% {
+    width: 50%;
+    opacity: 0;
+  }
+  50% {
+  }
+  100% {
+    width: 100%;
+    opacity: 1;
+  }
+}
+
 
 @keyframes fade-in {
   0% {
